--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <artifactId>jjwt</artifactId>
             <version>0.13.0</version>
         </dependency>
+        <!-- ===== SWAGGER / OPENAPI ===== -->
+
+        <!-- SpringDoc OpenAPI pour Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
